<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LightController</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="lightup">亮度增加</string>
    <string name="lightdown">亮度降低</string>
    <string name="saturationup">饱和度增加</string>
    <string name="saturationdown">饱和度降低</string>
    <string name="color_ring">彩环和开关</string>
    <string name="lightup_2">界面2亮度增加</string>
    <string name="lightdown_2">界面2亮度降低</string>
    <string name="sceneup_2">界面2场景回调</string>
    <string name="scenedown_2">界面2场景保存</string>
    <string name="saturationup_2">界面2饱和度增加</string>
    <string name="saturationdown_2">界面2饱和度降低</string>
    <string name="on_2">界面2开灯</string>
    <string name="off_2">界面2关灯</string>
    <string name="third_group1_on">界面3第一组开</string>
    <string name="third_group1_off">界面3第一组关</string>
    <string name="third_group2_on">界面3第二组开</string>
    <string name="third_group2_off">界面3第二组关</string>
    <string name="third_group3_off">界面3第三组关</string>
    <string name="third_group3_on">界面3第三组开</string>
    <string name="third_group4_on">界面3第四组开</string>
    <string name="third_group4_off">界面3第四组关</string>
    <string name="flicker">闪烁</string>
    <string name="changecolor">改变颜色</string>
    

</resources>
